[package]
name = "textframe"
version = "0.1.0"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Library to query plain text documents by unicode offset without loading them all into memory"
documentation = "https://docs.rs/textframe"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/proycon/textframe"
keywords = [ "text-processing", "text", "linguistics", "standoff"]

[dependencies]
hmac-sha256 = "1.1.8"
minicbor = { version = "0.25.1", features = ["derive","std" ] }
smallvec = "1.13.2"

[dev-dependencies]
tempfile = "3.15.0"
