[package]
name = "textframe"
version = "0.2.1"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Library to query plain text documents by unicode offset without loading them all into memory"
documentation = "https://docs.rs/textframe"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/proycon/textframe"
keywords = [ "text-processing", "text", "linguistics", "standoff"]

[dependencies]
hmac-sha256 = "1.1.8"
minicbor = { version = "0.26.5", features = ["derive","std" ] }
smallvec = "1.15.0"

[dev-dependencies]
tempfile = "3.20.0"
